--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8880
 
 test.hello=Hello4
+
+# 增加数据库连接
+spring.datasource.url=jdbc:mysql://rm-uf61v6p7s31lj0g6yeo.mysql.rds.aliyuncs.com:3306/wiki?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=wiki
+spring.datasource.password=wiki
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
